[package]
name = "ntt_guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
concrete-ntt = "0.1.2"
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.21.0", features = [ "std" ] }
serde = { version = "1.0.198", features = ["std", "derive"] }
